#pragma once
#include <Arduino.h>

#include "ports/IGaugeMotor.h"

class RpmGauge {
public:
  struct Config {
    float maxRpm = 8000.0f;
    int32_t minSteps = 0;
    int32_t maxSteps = 180;

    float normalStepsPerSec = 320.0f;
    float fastStepsPerSec = 420.0f;

    float calibrationRiseStepsPerSec = 300.0f;
    float calibrationFallStepsPerSec = 300.0f;
  };

  RpmGauge(IGaugeMotor& motor, const Config& cfg);

  void begin();
  void calibrate();
  void setRpm(float rpm);
  void tick(uint32_t nowMicros);

  float currentRpm() const { return _currentRpm; }
  int32_t targetSteps() const { return _targetSteps; }

private:
  int32_t rpmToSteps(float rpm) const;
  float clampRpm(float rpm) const;

  IGaugeMotor& _motor;
  Config _cfg;

  float _currentRpm = 0.0f;
  int32_t _targetSteps = 0;
};
