@startuml

left to right direction
scale 0.95

skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam defaultTextAlignment center
skinparam nodesep 12
skinparam ranksep 18
skinparam Padding 5

hide empty members
hide circle

package "Dominio" as Domain #F7F7F7 {
  class TelemetryFrame {
    +valid: bool
    +speedKmh: float
    +rpm: uint16_t
    +gear: int8_t
    +fuel: float
    +tireTempAvg: float
  }

  class UiStatus {
    +wifiConnected: bool
    +telemetryValid: bool
    +telemetrySignalPresent: bool
    +telemetryInputStatus: TelemetryInputStatus
    +speedKmh: float
    +rpm: int
    +gear: int
    +fuel: float
    +tireTempAvg: float
  }

  enum TelemetryInputStatus {
    Idle
    NoPacket
    PacketReceived
    PacketDiscarded
    ReceiveError
  }

  TelemetryFrame -[hidden]down- UiStatus
  UiStatus -[hidden]down- TelemetryInputStatus
}

package "Aplicacao" as Application #EAF2FF {
  class App {
    +begin(cfg: AppConfig)
    +tick()
  }

  class TelemetryService
  class InstrumentCluster

  App -[hidden]down- TelemetryService
  TelemetryService -[hidden]down- InstrumentCluster
}

package "Portas" as Ports #FFF6DD {
  interface IWifiConfigPortal {
    +begin()
    +tick()
    +isConnected(): bool
    +isPortalActive(): bool
  }

  interface IClock {
    +nowMs(): uint32_t
    +nowMicros(): uint32_t
  }

  interface IButtonInput {
    +begin()
    +tick(nowMs: uint32_t)
    +wasPressed(): bool
  }

  interface IPacketReceiver {
    +begin(port: uint16_t): bool
    +receive(buffer, bufferSize)
  }

  interface ITelemetrySource {
    +begin(port: uint16_t): bool
    +tick()
    +hasValidTelemetry(): bool
    +hasAnySignal(): bool
    +inputStatus(): TelemetryInputStatus
    +speedKmh(): float
    +rpm(): float
    +gear(): int
    +fuelLevel(): float
    +tireTempAvgC(): float
  }

  interface ITelemetryDecoder {
    +decode(data, len, out): bool
    +name(): const char*
  }

  interface IStatusDisplay {
    +begin(layoutId: uint8_t): bool
    +nextLayout(): bool
    +setStatus(status: UiStatus)
    +showMessage(line1, line2, line3, line4)
    +tick()
  }

  interface IGaugeMotor {
    +begin()
    +tick(nowMicros: uint32_t)
    +moveTo(targetSteps, riseSpeed, fallSpeed)
    +setCurrentPosition(steps)
    +isMoving(): bool
  }

  interface IInstrumentCluster {
    +begin()
    +setSpeedKmh(speedKmh: float)
    +setRpm(rpm: float)
    +setFuelLevel(fuelLevel: float)
    +setTireTemperature(tempC: float)
    +tick(nowMicros: uint32_t)
  }

  IWifiConfigPortal -[hidden]right- IClock
  IButtonInput -[hidden]right- IPacketReceiver
  ITelemetrySource -[hidden]right- ITelemetryDecoder
  IStatusDisplay -[hidden]right- IGaugeMotor

  IWifiConfigPortal -[hidden]down- IButtonInput
  IButtonInput -[hidden]down- ITelemetrySource
  ITelemetrySource -[hidden]down- IStatusDisplay
  IStatusDisplay -[hidden]down- IInstrumentCluster

  IClock -[hidden]down- IPacketReceiver
  IPacketReceiver -[hidden]down- ITelemetryDecoder
  ITelemetryDecoder -[hidden]down- IGaugeMotor
}

package "Instrumentos" as Instruments #EEF7EE {
  interface IInstrument {
    +begin()
    +tick(nowMicros: uint32_t)
    +supports(type): bool
    +apply(signal)
  }

  class SpeedGauge
  class RpmGauge
  class FuelGauge
  class TireTempGauge

  IInstrument -[hidden]down- SpeedGauge
  SpeedGauge -[hidden]down- RpmGauge
  RpmGauge -[hidden]down- FuelGauge
  FuelGauge -[hidden]down- TireTempGauge
}

package "Adaptadores" as Adapters #FCEFEF {
  class WiFiConfigPortal
  class GpioButtonInput
  class ArduinoClock
  class UdpReceiver
  class Forza7Decoder
  class DisplayService

  interface IDisplayLayout {
    +begin(display)
    +render(status: UiStatus, forceAll: bool, now)
  }
  class GaugeMotorTmc2208

  WiFiConfigPortal -[hidden]down- GpioButtonInput
  GpioButtonInput -[hidden]down- ArduinoClock
  ArduinoClock -[hidden]down- UdpReceiver
  UdpReceiver -[hidden]down- Forza7Decoder
  Forza7Decoder -[hidden]down- DisplayService
  DisplayService -[hidden]down- IDisplayLayout
  IDisplayLayout -[hidden]down- GaugeMotorTmc2208
}

Domain -[hidden]right- Application
Application -[hidden]right- Ports
Application -[hidden]down- Instruments
Ports -[hidden]down- Adapters
Instruments -[hidden]right- Adapters

UiStatus -down-> TelemetryInputStatus

ITelemetrySource ..> TelemetryFrame
ITelemetrySource ..> TelemetryInputStatus
ITelemetryDecoder ..> TelemetryFrame
IStatusDisplay ..> UiStatus
IDisplayLayout ..> UiStatus

TelemetryService ..|> ITelemetrySource
InstrumentCluster ..|> IInstrumentCluster

SpeedGauge ..|> IInstrument
RpmGauge ..|> IInstrument
FuelGauge ..|> IInstrument
TireTempGauge ..|> IInstrument

WiFiConfigPortal ..|> IWifiConfigPortal
GpioButtonInput ..|> IButtonInput
ArduinoClock ..|> IClock
UdpReceiver ..|> IPacketReceiver
Forza7Decoder ..|> ITelemetryDecoder
DisplayService ..|> IStatusDisplay
GaugeMotorTmc2208 ..|> IGaugeMotor

App *-left- UiStatus
App -right-> IWifiConfigPortal
App -right-> IButtonInput
App -up-> IClock
App -right-> ITelemetrySource
App -right-> IStatusDisplay
App -down-> IInstrumentCluster

TelemetryService *-left- TelemetryFrame
TelemetryService -up-> IClock
TelemetryService -right-> IPacketReceiver
TelemetryService -down-> ITelemetryDecoder

InstrumentCluster -down-> "0..*" IInstrument

DisplayService *-left- UiStatus
DisplayService -down-> "0..*" IDisplayLayout

SpeedGauge -up-> IClock
SpeedGauge -right-> IGaugeMotor

RpmGauge -up-> IClock
RpmGauge -right-> IGaugeMotor

FuelGauge -up-> IClock
FuelGauge -right-> IGaugeMotor

TireTempGauge -up-> IClock
TireTempGauge -right-> IGaugeMotor

@enduml
